<resources>
    <string name="app_name">CoinKu</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_profile">Profile</string>
    <string name="title_tab_favorite">Favorite</string>
    <string name="placeholder_banner_title">Banner Title</string>
    <string name="placeholder_banner_description">Banner Description</string>
    <string name="invest_today">Invest Today</string>
    <string name="trending_coins">Trending Coins</string>
    <string name="favorite_coins">Favorite Coins</string>
    <string name="placeholder_coin_name">Coin Name</string>
    <string name="placeholder_coin_abbreviation">Coin Abbreviation</string>
    <string name="hi_username">Hi, %1$s!</string>
    <string name="text_button_login">Login</string>
    <string name="text_need_signup">Need an Account?</string>
    <string name="text_nav_signup">\tRegister</string>
    <string name="text_hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_username">Username</string>
    <string name="text_hint_email">Email</string>
    <string name="text_error_email_empty">Email cannot empty</string>
    <string name="text_error_email_invalid">Email is invalid</string>
    <string name="text_error_password_empty">Password cannot empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password does not match</string>
    <string name="text_login_here">Login Here</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="title_register">Register Now</string>
    <string name="hint_name_register">Name</string>
    <string name="hint_email_register">Email</string>
    <string name="hint_password_register">Password</string>
    <string name="hint_confirm_password_register">Confirm your password</string>
    <string name="password_not_same">Password not same</string>
    <string name="password_not_empty">Password not empty</string>
    <string name="password_under_character">Password under character</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="email_invalid">Email invalid</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="register_success">Register success!</string>
    <string name="register_failed">Register failed</string>
    <string name="btn_register">Register</string>
    <string name="have_account">Have account?</string>
    <string name="navigate_login">Login</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="registration_success">Registration success!</string>
    <string name="yes">Yes</string>
    <string name="desc_iv_icon_back">image for iv_coin_back</string>
    <string name="text_button_to_coingecko">Open In CoinGecko</string>
    <string name="desc_iv_coin_image">image for iv_coin_image</string>
    <string name="text_coin_name">Crypto Name</string>
    <string name="text_coin_price">10000.0</string>
    <string name="desc_iv_favorite">icon star iv_favorite</string>
    <string name="please_check_your_email_for_reset_your_password">Please check your email for reset your password</string>
    <string name="text_confirm_reset">Do you want to reset your password?</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_reset">Okay</string>
    <string name="text_reset_success">Email has been sent,\nplease check your email</string>
    <string name="text_send_request_to_your_email">Send Request to Your Email</string>
    <string name="text_enter_the_email">Enter the email to change your password</string>
    <string name="text_send">Send</string>
    <string name="text_login_failed">Login failed, try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="change_password_alert">You can check inbox email or spam for change password right now</string>
    <string name="account_identity_confirm">Are you serious about changing your account identity?</string>
    <string name="change_name_success">Change name success</string>
    <string name="change_name_failed">Change name failed</string>
    <string name="failed_to_send_request_email">Failed to send request Email</string>
    <string name="banner_desc">Make your first investment today</string>
</resources>