<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container_coin_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_coin_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/desc_iv_coin_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_coin_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_coin_name"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cv_container_coin_image"
            app:layout_constraintEnd_toStartOf="@+id/iv_favorite"
            app:layout_constraintStart_toEndOf="@+id/cv_container_coin_image"
            app:layout_constraintTop_toTopOf="@+id/cv_container_coin_image"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_coin_price"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/text_coin_price"
            app:layout_constraintEnd_toStartOf="@id/iv_favorite"
            app:layout_constraintStart_toEndOf="@+id/cv_container_coin_image"
            app:layout_constraintTop_toBottomOf="@id/tv_coin_name"
            android:layout_marginStart="16dp"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_container_coin_image"
            app:layout_constraintBottom_toBottomOf="@id/cv_container_coin_image"
            android:src="@drawable/ic_tab_fav"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/desc_iv_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>